# whiscraper

./: pyproject.toml
.github/workflows/: pipeline.yaml
src/whiscraper/: __init__.py
src/whiscraper/browser/extensions/: cf-captcha-solver.crx
src/whiscraper/browser/tools/: request_interceptor.py
